tests/lean/modBug.lean
theorem proofOfFalse : False := Nat.zeroNeOne (Nat.mod_zero 1)
